cl_openai_gateway/inferencing_gateway_class.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: inferencing-gateway-class
spec:
  controllerName: openshift.io/gateway-controller/v1
