cl_openai_gateway/gateway_openai.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: openai-gateway
  namespace: openshift-ingress
spec:
  gatewayClassName: inferencing-gateway-class
  listeners:

  - name: openai-endpoint
    protocol: HTTPS
    port: 443
    hostname: "api.openai.com"
    allowedRoutes:
      namespaces:
        from: All
